clusters/home/apps/mediabox/middleware.yml
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: default-headers-mediabox
  namespace: mediabox
spec:
  headers:
    browserXssFilter: true
    contentTypeNosniff: true
    forceSTSHeader: true
    stsIncludeSubdomains: true
    stsPreload: true
    stsSeconds: 15552000
    customFrameOptionsValue: SAMEORIGIN
    customRequestHeaders:
      X-Forwarded-Proto: https
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: mediabox-oidc
  namespace: mediabox
spec:
  plugin:
    oidc:
      Secret: "urn:k8s:secret:secrets-mediabox-oidc:pluginSecret"
      Provider:
        Url: "https://idp.layertwo.dev/"
        ClientId: "urn:k8s:secret:secrets-mediabox-oidc:clientId"
        ClientSecret: "urn:k8s:secret:secrets-mediabox-oidc:clientSecret"
      Scopes: ["openid", "profile", "groups"]
