clusters/home/apps/mediabox/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: mediabox
  labels:
    name: mediabox
    goldilocks.fairwinds.com/enabled: "true"
